# AudioBatch

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  AudioBatch.jucer  CMakeLists.txt  CMakePresets.json  README.md  build.sh  common.sh  format.sh  format_code.sh  install.sh  lint.sh
.github/workflows/: build.yml
Source/: AudioBatchComponent.cpp  AudioBatchComponent.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  Main.cpp  ThumbnailComponent.cpp  ThumbnailComponent.h  utils.cpp  utils.h
include/ASIO_SDK/: README.md
src/: AnalysisCache.cpp  AnalysisCache.h  AnalysisCoordinator.cpp  AnalysisCoordinator.h  AudioAnalysisCli.cpp  AudioAnalysisCli.h  AudioAnalysisService.cpp  AudioAnalysisService.h  AudioAnalysisTypes.h  AudioBatchComponent.cpp  AudioBatchComponent.h  AudioFileTableModel.cpp  AudioFileTableModel.h  AudioNormalizationService.cpp  AudioNormalizationService.h  CliMain.cpp  CustomLookAndFeel.cpp  CustomLookAndFeel.h  IntervalStepSlider.h  Main.cpp  MetadataService.cpp  MetadataService.h  NormalizeCoordinator.cpp  NormalizeCoordinator.h  PluginChain.cpp  PluginChain.h  PluginChainEditor.cpp  PluginChainEditor.h  PluginProcessing.h  PluginProcessingCoordinator.cpp  PluginProcessingCoordinator.h  PluginProcessingService.cpp  PluginProcessingService.h  StringFormat.h  ThumbnailComponent.cpp  ThumbnailComponent.h  utils.cpp  utils.h  version.h
